first pass over bib

--- a/thesis.tex
+++ b/thesis.tex
@@ -616,7 +616,7 @@ bandwidth. Ideal applications for programmable switches use little memory, requi
 processing and deliver outsized performance benefit.
 
 Specifically, prior work has shown that programmable switches are able to provide rack-scale
-serialization at low cost~\cite{eris,no-paxos,when-computer}, manage
+serialization at low cost~\cite{eris,nopaxos,when-computer}, manage
 locks~\cite{netlock}, and track the state required to maintain an RDMA reliable
 connection~\cite{tea}. Researchers have even used a programmable switch to implement a centralized
 memory controller including a unified TLB and cache for passive remote memory~\cite{mind}. Their
